stretch: fixed naviagtion

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,19 @@
 // Navigation code here
+.fixed-nav {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	background-color: #FFFFFF;
+	opacity: 100%;
+	.flexc();
+}
+
 .navigation {
 	.flexr();
 	justify-content: center;
 	padding: 2vh 2vw;
+	
 }
 
 .nav-item {
@@ -29,6 +40,7 @@
 	}
 	
 .main-header {
+	margin-top: 105px;
 	border-radius: 5px;
 	width: 100%;
 }
